@@ -88,3 +88,6 @@ Bug fixes:
 * bug 3604 fixed - Problems with getting Frame uicontrol position (Scilab crash)
 
 * bug 3647 fixed - 'call' doesn't manage external functions named with more 23 characters
+
+* bug 3663 fixed - getshortpathname & getlongpathname could return '' and not a correct path
+
